crates/poet-vibe/src/parse.rs
//! Recursive-descent parser for vibe-0.1.

use crate::ast::*;
use crate::error::{DiagCode, Diagnostic};
use crate::lex::{Lexer, Token, TokenKind};
use crate::span::Span;

pub struct Parser<'a> {
    lex: Lexer<'a>,
    cur: Token,
}

impl<'a> Parser<'a> {
    pub fn new(src: &'a str) -> Result<Self, Diagnostic> {
        let mut lex = Lexer::new(src);
        let cur = lex.next_token()?;
        Ok(Self { lex, cur })
    }

    #[allow(dead_code)]
    pub fn source(&self) -> &'a str {
        self.lex.source()
    }

    pub fn parse_program(&mut self) -> Result<Program, Diagnostic> {
        let start = self.cur.span.start;
        let module = if self.kw("module") {
            Some(self.parse_module()?)
        } else {
            None
        };
        let mut imports = Vec::new();
        while self.kw("import") {
            imports.push(self.parse_import()?);
        }
        let mut prefixes = Vec::new();
        while self.kw("prefix") {
            prefixes.push(self.parse_prefix()?);
        }
        let mut requires = Vec::new();
        if self.kw("requires") {
            requires = self.parse_requires()?;
        }
        let mut items = Vec::new();
        while self.cur.kind != TokenKind::Eof {
            items.push(self.parse_item()?);
        }
        let end = items
            .last()
            .map(|i| item_span(i).end)
            .unwrap_or(self.cur.span.end);
        Ok(Program {
            span: Span::new(start, end),
            module,
            imports,
            prefixes,
            requires,
            items,
        })
    }

    pub fn parse_cell_body(&mut self) -> Result<Expr, Diagnostic> {
        self.expect(TokenKind::Eq, "cell body must start with '='")?;
        let expr = self.parse_expr()?;
        if self.cur.kind != TokenKind::Eof && self.cur.kind != TokenKind::Semicolon {
            return Err(self.err("unexpected tokens after cell expression"));
        }
        Ok(expr)
    }

    fn parse_module(&mut self) -> Result<ModuleDecl, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?; // module
        let name = if self.cur.kind == TokenKind::Iri {
            let s = self.text().to_string();
            self.bump()?;
            Name::Iri(strip_iri(&s))
        } else {
            let s = self.expect_ident()?;
            Name::Ident(s)
        };
        let end = self.expect(TokenKind::Semicolon, "expected ';' after module")?.end;
        Ok(ModuleDecl {
            span: Span::new(start, end),
            name,
        })
    }

    fn parse_import(&mut self) -> Result<ImportDecl, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?;
        let path = self.expect_string()?;
        let alias = if self.kw("as") {
            self.bump()?;
            Some(self.expect_ident()?)
        } else {
            None
        };
        let end = self.expect(TokenKind::Semicolon, "expected ';' after import")?.end;
        Ok(ImportDecl {
            span: Span::new(start, end),
            path,
            alias,
        })
    }

    fn parse_prefix(&mut self) -> Result<PrefixDecl, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?;
        let prefix = self.expect_ident()?;
        self.expect(TokenKind::Colon, "expected ':' after prefix name")?;
        if self.cur.kind != TokenKind::Iri {
            return Err(self.err("expected IRI after prefix"));
        }
        let iri = strip_iri(self.text());
        self.bump()?;
        let end = self.expect(TokenKind::Semicolon, "expected ';' after prefix")?.end;
        Ok(PrefixDecl {
            span: Span::new(start, end),
            prefix,
            iri,
        })
    }

    fn parse_requires(&mut self) -> Result<Vec<CapSpec>, Diagnostic> {
        self.bump()?;
        self.expect(TokenKind::LBracket, "expected '[' after requires")?;
        let mut caps = Vec::new();
        if self.cur.kind != TokenKind::RBracket {
            loop {
                caps.push(self.parse_cap_spec()?);
                if self.cur.kind == TokenKind::Comma {
                    self.bump()?;
                    continue;
                }
                break;
            }
        }
        self.expect(TokenKind::RBracket, "expected ']' after requires")?;
        self.expect(TokenKind::Semicolon, "expected ';' after requires")?;
        Ok(caps)
    }

    fn parse_cap_spec(&mut self) -> Result<CapSpec, Diagnostic> {
        let start = self.cur.span.start;
        if !self.kw("capability") {
            return Err(self.err("expected capability(...)"));
        }
        self.bump()?;
        self.expect(TokenKind::LParen, "expected '('")?;
        let id = self.expect_string()?;
        let mut args = Vec::new();
        while self.cur.kind == TokenKind::Comma {
            self.bump()?;
            args.push(self.parse_named_arg()?);
        }
        let end = self.expect(TokenKind::RParen, "expected ')'")?.end;
        Ok(CapSpec {
            span: Span::new(start, end),
            id,
            args,
        })
    }

    fn parse_item(&mut self) -> Result<Item, Diagnostic> {
        if self.looks_like_function() {
            return Ok(Item::Function(self.parse_function()?));
        }
        if self.kw("on") {
            return Ok(Item::Hook(self.parse_hook()?));
        }
        if self.kw("const") {
            return Ok(Item::Const(self.parse_const()?));
        }
        if self.kw("enum") {
            return Ok(Item::Enum(self.parse_enum()?));
        }
        Ok(Item::Statement(self.parse_stmt()?))
    }

    fn looks_like_function(&self) -> bool {
        if self.kw("fn") || self.kw("async") || self.kw("pure") || self.kw("hot") || self.kw("cold")
        {
            return true;
        }
        self.kw("effect") && self.peek_fn_after_effect()
    }

    fn peek_fn_after_effect(&self) -> bool {
        // `effect fn` vs `effect expr;` — we only have one token of lookahead.
        // Heuristic: next token after bump would be needed. Store nothing;
        // parse_function starts with effect and requires fn/async next, else we
        // treat as statement. So look at remaining source after current token.
        let rest = &self.lex.source()[self.cur.span.end as usize..];
        let trimmed = rest.trim_start();
        trimmed.starts_with("fn") || trimmed.starts_with("async")
    }

    fn parse_function(&mut self) -> Result<FunctionDecl, Diagnostic> {
        let start = self.cur.span.start;
        let effect = self.take_effect_class()?;
        let is_async = if self.kw("async") {
            self.bump()?;
            true
        } else {
            false
        };
        if !self.kw("fn") {
            return Err(self.err("expected fn"));
        }
        self.bump()?;
        let name = self.expect_ident()?;
        self.expect(TokenKind::LParen, "expected '('")?;
        let params = self.parse_params()?;
        self.expect(TokenKind::RParen, "expected ')'")?;
        let budget = self.parse_budget()?;
        let ret = if self.cur.kind == TokenKind::ThinArrow {
            self.bump()?;
            Some(self.parse_type()?)
        } else {
            None
        };
        let body = self.parse_block()?;
        Ok(FunctionDecl {
            span: Span::new(start, body.span.end),
            effect,
            is_async,
            name,
            params,
            budget,
            ret,
            body,
        })
    }

    fn parse_hook(&mut self) -> Result<HookDecl, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?; // on
        let mut path = vec![self.expect_ident()?];
        while self.cur.kind == TokenKind::Colon {
            self.bump()?;
            path.push(self.expect_ident()?);
        }
        self.expect(TokenKind::LParen, "expected '(' after event path")?;
        let params = self.parse_params()?;
        self.expect(TokenKind::RParen, "expected ')'")?;
        let budget = self.parse_budget()?;
        let ret = if self.cur.kind == TokenKind::ThinArrow {
            self.bump()?;
            Some(self.parse_type()?)
        } else {
            None
        };
        let body = self.parse_block()?;
        Ok(HookDecl {
            span: Span::new(start, body.span.end),
            path,
            params,
            budget,
            ret,
            body,
        })
    }

    fn parse_const(&mut self) -> Result<ConstDecl, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?;
        let name = self.expect_ident()?;
        let ty = if self.cur.kind == TokenKind::Colon {
            self.bump()?;
            Some(self.parse_type()?)
        } else {
            None
        };
        self.expect(TokenKind::Eq, "expected '=' in const")?;
        let value = self.parse_expr()?;
        let end = self.expect(TokenKind::Semicolon, "expected ';'")?.end;
        Ok(ConstDecl {
            span: Span::new(start, end),
            name,
            ty,
            value,
        })
    }

    /// Parse a user-defined enum declaration (T9).
    ///
    /// ```vibe
    /// enum Shape {
    ///   Circle(f64),
    ///   Square(f64),
    ///   Rect(f64, f64),
    ///   Point,
    /// }
    /// ```
    fn parse_enum(&mut self) -> Result<EnumDecl, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?; // 'enum'
        let name = self.expect_ident()?;
        self.expect(TokenKind::LBrace, "expected '{' after enum name")?;
        let mut variants = Vec::new();
        while self.cur.kind != TokenKind::RBrace {
            let vstart = self.cur.span.start;
            let vname = self.expect_ident()?;
            let mut payload = Vec::new();
            if self.cur.kind == TokenKind::LParen {
                self.bump()?;
                loop {
                    payload.push(self.parse_type()?);
                    if self.cur.kind == TokenKind::Comma {
                        self.bump()?;
                        continue;
                    }
                    break;
                }
                self.expect(TokenKind::RParen, "expected ')' after variant payload types")?;
            }
            variants.push(EnumVariant {
                span: Span::new(vstart, self.cur.span.start),
                name: vname,
                payload,
            });
            if self.cur.kind == TokenKind::Comma {
                self.bump()?;
                continue;
            }
            break;
        }
        let end = self.expect(TokenKind::RBrace, "expected '}' after enum variants")?.end;
        Ok(EnumDecl {
            span: Span::new(start, end),
            name,
            variants,
        })
    }

    fn parse_budget(&mut self) -> Result<Vec<NamedArg>, Diagnostic> {
        if !self.kw("budget") && !(self.cur.kind == TokenKind::Ident && self.text() == "budget") {
            return Ok(Vec::new());
        }
        self.bump()?;
        self.expect(TokenKind::LParen, "expected '(' after budget")?;
        let mut args = Vec::new();
        if self.cur.kind != TokenKind::RParen {
            loop {
                args.push(self.parse_named_arg()?);
                if self.cur.kind == TokenKind::Comma {
                    self.bump()?;
                    continue;
                }
                break;
            }
        }
        self.expect(TokenKind::RParen, "expected ')' after budget")?;
        Ok(args)
    }

    fn parse_params(&mut self) -> Result<Vec<Param>, Diagnostic> {
        let mut params = Vec::new();
        if self.cur.kind == TokenKind::RParen {
            return Ok(params);
        }
        loop {
            let start = self.cur.span.start;
            let name = self.expect_ident()?;
            self.expect(TokenKind::Colon, "expected ':' after parameter name")?;
            let ty = self.parse_type()?;
            params.push(Param {
                span: Span::new(start, ty.span.end),
                name,
                ty,
            });
            if self.cur.kind == TokenKind::Comma {
                self.bump()?;
                continue;
            }
            break;
        }
        Ok(params)
    }

    fn parse_stmt(&mut self) -> Result<Stmt, Diagnostic> {
        if self.kw("let") {
            return self.parse_let();
        }
        if self.kw("if") {
            let stmt = self.parse_if()?;
            self.eat_optional_semi()?;
            return Ok(stmt);
        }
        if self.kw("for") {
            let stmt = self.parse_for()?;
            self.eat_optional_semi()?;
            return Ok(stmt);
        }
        if self.kw("while") {
            let stmt = self.parse_while()?;
            self.eat_optional_semi()?;
            return Ok(stmt);
        }
        if self.kw("match") {
            let stmt = self.parse_match()?;
            self.eat_optional_semi()?;
            return Ok(stmt);
        }
        if self.kw("return") {
            return self.parse_return();
        }
        if self.kw("yield") {
            return self.parse_yield();
        }
        if self.kw("transaction") {
            let stmt = self.parse_transaction()?;
            self.eat_optional_semi()?;
            return Ok(stmt);
        }
        if self.kw("effect") && !self.peek_fn_after_effect() {
            let start = self.cur.span.start;
            self.bump()?;
            let expr = self.parse_expr()?;
            let end = self.expect(TokenKind::Semicolon, "expected ';'")?.end;
            return Ok(Stmt::Effect {
                span: Span::new(start, end),
                expr,
            });
        }
        if self.cur.kind == TokenKind::LBrace {
            let b = self.parse_block()?;
            self.eat_optional_semi()?;
            return Ok(Stmt::Block(b));
        }
        let expr = self.parse_expr()?;
        if self.cur.kind == TokenKind::Eq {
            self.bump()?;
            let value = self.parse_expr()?;
            let end = self.expect(TokenKind::Semicolon, "expected ';'")?.end;
            return Ok(Stmt::Assign {
                span: Span::new(expr.span.start, end),
                target: expr,
                value,
            });
        }
        let end = self.expect(TokenKind::Semicolon, "expected ';' after expression")?.end;
        Ok(Stmt::Expr {
            span: Span::new(expr.span.start, end),
            expr,
        })
    }

    fn parse_let(&mut self) -> Result<Stmt, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?;
        let mutable = if self.kw("mut") {
            self.bump()?;
            true
        } else {
            false
        };
        let name = self.expect_ident()?;
        let ty = if self.cur.kind == TokenKind::Colon {
            self.bump()?;
            Some(self.parse_type()?)
        } else {
            None
        };
        let value = if self.cur.kind == TokenKind::Eq {
            self.bump()?;
            Some(self.parse_expr()?)
        } else {
            None
        };
        let end = self.expect(TokenKind::Semicolon, "expected ';'")?.end;
        Ok(Stmt::Let {
            span: Span::new(start, end),
            mutable,
            name,
            ty,
            value,
        })
    }

    fn parse_if(&mut self) -> Result<Stmt, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?;
        let cond = self.parse_expr()?;
        let then_block = self.parse_block()?;
        let else_block = if self.kw("else") {
            self.bump()?;
            if self.kw("if") {
                Some(Box::new(self.parse_if()?))
            } else {
                let b = self.parse_block()?;
                Some(Box::new(Stmt::Block(b)))
            }
        } else {
            None
        };
        let end = else_block
            .as_ref()
            .map(|e| e.span().end)
            .unwrap_or(then_block.span.end);
        Ok(Stmt::If {
            span: Span::new(start, end),
            cond,
            then_block,
            else_block,
        })
    }

    fn parse_for(&mut self) -> Result<Stmt, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?;
        let name = self.expect_ident()?;
        if !self.kw("in") {
            return Err(self.err("expected 'in'"));
        }
        self.bump()?;
        let iter = self.parse_expr()?;
        let body = self.parse_block()?;
        Ok(Stmt::For {
            span: Span::new(start, body.span.end),
            name,
            iter,
            body,
        })
    }

    fn parse_while(&mut self) -> Result<Stmt, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?;
        let cond = self.parse_expr()?;
        let body = self.parse_block()?;
        Ok(Stmt::While {
            span: Span::new(start, body.span.end),
            cond,
            body,
        })
    }

    fn parse_match(&mut self) -> Result<Stmt, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?;
        let scrutinee = self.parse_expr()?;
        self.expect(TokenKind::LBrace, "expected '{'")?;
        let mut arms = Vec::new();
        while self.cur.kind != TokenKind::RBrace && self.cur.kind != TokenKind::Eof {
            arms.push(self.parse_match_arm()?);
        }
        let end = self.expect(TokenKind::RBrace, "expected '}'")?.end;
        Ok(Stmt::Match {
            span: Span::new(start, end),
            scrutinee,
            arms,
        })
    }

    fn parse_match_arm(&mut self) -> Result<MatchArm, Diagnostic> {
        let start = self.cur.span.start;
        let pattern = self.parse_pattern()?;
        self.expect(TokenKind::FatArrow, "expected '=>'")?;
        if self.cur.kind == TokenKind::LBrace {
            let body = self.parse_block()?;
            Ok(MatchArm {
                span: Span::new(start, body.span.end),
                pattern,
                body: ArmBody::Block(body),
            })
        } else {
            let expr = self.parse_expr()?;
            if self.cur.kind == TokenKind::Comma {
                self.bump()?;
            }
            Ok(MatchArm {
                span: Span::new(start, expr.span.end),
                pattern,
                body: ArmBody::Expr(expr),
            })
        }
    }

    fn parse_pattern(&mut self) -> Result<Pattern, Diagnostic> {
        if self.cur.kind == TokenKind::Ident && self.text() == "_" {
            self.bump()?;
            return Ok(Pattern::Wildcard);
        }
        if self.kw("None") || (self.cur.kind == TokenKind::Ident && self.text() == "None") {
            self.bump()?;
            return Ok(Pattern::None);
        }
        if matches!(self.text(), "Ok" | "Err" | "Some") && self.cur.kind == TokenKind::Ident {
            let tag = self.text().to_string();
            self.bump()?;
            self.expect(TokenKind::LParen, "expected '('")?;
            let inner = self.parse_pattern()?;
            self.expect(TokenKind::RParen, "expected ')'")?;
            return Ok(match tag.as_str() {
                "Ok" => Pattern::Ok(Box::new(inner)),
                "Err" => Pattern::Err(Box::new(inner)),
                _ => Pattern::Some(Box::new(inner)),
            });
        }
        if matches!(
            self.cur.kind,
            TokenKind::String | TokenKind::Int | TokenKind::Float | TokenKind::Keyword
        ) && matches!(self.text(), "true" | "false" | "null")
            || matches!(self.cur.kind, TokenKind::String | TokenKind::Int | TokenKind::Float)
        {
            if let Ok(lit) = self.take_literal() {
                return Ok(Pattern::Literal(lit));
            }
        }
        // T9: User-defined enum variant pattern: `EnumName.Variant(args)`
        // or `EnumName.Variant` (unit variant).
        if self.cur.kind == TokenKind::Ident {
            let name = self.text().to_string();
            // Peek ahead: is there a `.` after this ident?
            let rest = &self.lex.source()[self.cur.span.end as usize..];
            let trimmed = rest.trim_start();
            if trimmed.starts_with('.') {
                self.bump()?; // enum name
                self.expect(TokenKind::Dot, "expected '.'")?;
                let variant_name = self.expect_ident()?;
                let mut args = Vec::new();
                if self.cur.kind == TokenKind::LParen {
                    self.bump()?;
                    if self.cur.kind != TokenKind::RParen {
                        loop {
                            args.push(self.parse_pattern()?);
                            if self.cur.kind == TokenKind::Comma {
                                self.bump()?;
                                continue;
                            }
                            break;
                        }
                    }
                    self.expect(TokenKind::RParen, "expected ')' after variant pattern args")?;
                }
                return Ok(Pattern::Variant {
                    enum_name: name,
                    variant_name,
                    args,
                });
            }
            // Fall through to ident pattern.
            let _ = name; // suppress unused
        }
        let name = self.expect_ident()?;
        Ok(Pattern::Ident(name))
    }

    fn parse_return(&mut self) -> Result<Stmt, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?;
        let value = if self.cur.kind == TokenKind::Semicolon {
            None
        } else {
            Some(self.parse_expr()?)
        };
        let end = self.expect(TokenKind::Semicolon, "expected ';'")?.end;
        Ok(Stmt::Return {
            span: Span::new(start, end),
            value,
        })
    }

    fn parse_yield(&mut self) -> Result<Stmt, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?;
        let value = if self.cur.kind == TokenKind::Semicolon {
            None
        } else {
            Some(self.parse_expr()?)
        };
        let end = self.expect(TokenKind::Semicolon, "expected ';'")?.end;
        Ok(Stmt::Yield {
            span: Span::new(start, end),
            value,
        })
    }

    fn parse_transaction(&mut self) -> Result<Stmt, Diagnostic> {
        let start = self.cur.span.start;
        self.bump()?;
        let mut args = Vec::new();
        if self.cur.kind == TokenKind::LParen {
            self.bump()?;
            if self.cur.kind != TokenKind::RParen {
                loop {
                    args.push(self.parse_named_arg()?);
                    if self.cur.kind == TokenKind::Comma {
                        self.bump()?;
                        continue;
                    }
                    break;
                }
            }
            self.expect(TokenKind::RParen, "expected ')'")?;
        }
        let body = self.parse_block()?;
        Ok(Stmt::Transaction {
            span: Span::new(start, body.span.end),
            args,
            body,
        })
    }

    fn parse_block(&mut self) -> Result<Block, Diagnostic> {
        let start = self.expect(TokenKind::LBrace, "expected '{'")?.start;
        let mut stmts = Vec::new();
        while self.cur.kind != TokenKind::RBrace && self.cur.kind != TokenKind::Eof {
            stmts.push(self.parse_stmt()?);
        }
        let end = self.expect(TokenKind::RBrace, "expected '}'")?.end;
        Ok(Block {
            span: Span::new(start, end),
            stmts,
        })
    }

    fn parse_expr(&mut self) -> Result<Expr, Diagnostic> {
        self.parse_or()
    }

    fn parse_or(&mut self) -> Result<Expr, Diagnostic> {
        let mut left = self.parse_and()?;
        while self.cur.kind == TokenKind::PipePipe {
            self.bump()?;
            let right = self.parse_and()?;
            left = bin(left, BinOp::Or, right);
        }
        Ok(left)
    }

    /// Continue parsing binary operators from the mul level upward, given an
    /// already-parsed left operand (e.g. an identifier with postfix operators).
    /// This lets `parse_args` handle expressions like `v2 / g` as call arguments
    /// where the leading identifier was already consumed for named-arg detection.
    fn continue_binary(&mut self, mut left: Expr) -> Result<Expr, Diagnostic> {
        // mul level
        loop {
            let op = match self.cur.kind {
                TokenKind::Star => BinOp::Mul,
                TokenKind::Slash => BinOp::Div,
                TokenKind::Percent => BinOp::Rem,
                _ => break,
            };
            self.bump()?;
            let right = self.parse_unary()?;
            left = bin(left, op, right);
        }
        // add level
        loop {
            let op = match self.cur.kind {
                TokenKind::Plus => BinOp::Add,
                TokenKind::Minus => BinOp::Sub,
                _ => break,
            };
            self.bump()?;
            let right = self.parse_mul()?;
            left = bin(left, op, right);
        }
        // rel level
        loop {
            let op = match self.cur.kind {
                TokenKind::Lt => BinOp::Lt,
                TokenKind::Le => BinOp::Le,
                TokenKind::Gt => BinOp::Gt,
                TokenKind::Ge => BinOp::Ge,
                _ => break,
            };
            self.bump()?;
            let right = self.parse_add()?;
            left = bin(left, op, right);
        }
        // eq level
        loop {
            let op = match self.cur.kind {
                TokenKind::EqEq => BinOp::Eq,
                TokenKind::Ne => BinOp::Ne,
                _ => break,
            };
            self.bump()?;
            let right = self.parse_rel()?;
            left = bin(left, op, right);
        }
        // and level
        while self.cur.kind == TokenKind::AmpAmp {
            self.bump()?;
            let right = self.parse_eq()?;
            left = bin(left, BinOp::And, right);
        }
        // or level
        while self.cur.kind == TokenKind::PipePipe {
            self.bump()?;
            let right = self.parse_and()?;
            left = bin(left, BinOp::Or, right);
        }
        Ok(left)
    }

    fn parse_and(&mut self) -> Result<Expr, Diagnostic> {
        let mut left = self.parse_eq()?;
        while self.cur.kind == TokenKind::AmpAmp {
            self.bump()?;
            let right = self.parse_eq()?;
            left = bin(left, BinOp::And, right);
        }
        Ok(left)
    }

    fn parse_eq(&mut self) -> Result<Expr, Diagnostic> {
        let mut left = self.parse_rel()?;
        loop {
            let op = match self.cur.kind {
                TokenKind::EqEq => BinOp::Eq,
                TokenKind::Ne => BinOp::Ne,
                _ => break,
            };
            self.bump()?;
            let right = self.parse_rel()?;
            left = bin(left, op, right);
        }
        Ok(left)
    }

    fn parse_rel(&mut self) -> Result<Expr, Diagnostic> {
        let mut left = self.parse_add()?;
        loop {
            let op = match self.cur.kind {
                TokenKind::Lt => BinOp::Lt,
                TokenKind::Le => BinOp::Le,
                TokenKind::Gt => BinOp::Gt,
                TokenKind::Ge => BinOp::Ge,
                _ => break,
            };
            self.bump()?;
            let right = self.parse_add()?;
            left = bin(left, op, right);
        }
        Ok(left)
    }

    fn parse_add(&mut self) -> Result<Expr, Diagnostic> {
        let mut left = self.parse_mul()?;
        loop {
            let op = match self.cur.kind {
                TokenKind::Plus => BinOp::Add,
                TokenKind::Minus => BinOp::Sub,
                _ => break,
            };
            self.bump()?;
            let right = self.parse_mul()?;
            left = bin(left, op, right);
        }
        Ok(left)
    }

    fn parse_mul(&mut self) -> Result<Expr, Diagnostic> {
        let mut left = self.parse_unary()?;
        loop {
            let op = match self.cur.kind {
                TokenKind::Star => BinOp::Mul,
                TokenKind::Slash => BinOp::Div,
                TokenKind::Percent => BinOp::Rem,
                _ => break,
            };
            self.bump()?;
            let right = self.parse_unary()?;
            left = bin(left, op, right);
        }
        Ok(left)
    }

    fn parse_unary(&mut self) -> Result<Expr, Diagnostic> {
        if self.kw("await") {
            let start = self.cur.span.start;
            self.bump()?;
            let expr = self.parse_unary()?;
            return Ok(Expr {
                span: Span::new(start, expr.span.end),
                kind: ExprKind::Await(Box::new(expr)),
            });
        }
        let op = match self.cur.kind {
            TokenKind::Bang => Some(UnOp::Not),
            TokenKind::Minus => Some(UnOp::Neg),
            TokenKind::Plus => Some(UnOp::Plus),
            _ => None,
        };
        if let Some(op) = op {
            let start = self.cur.span.start;
            self.bump()?;
            let expr = self.parse_unary()?;
            return Ok(Expr {
                span: Span::new(start, expr.span.end),
                kind: ExprKind::Unary {
                    op,
                    expr: Box::new(expr),
                },
            });
        }
        self.parse_postfix()
    }

    fn parse_postfix(&mut self) -> Result<Expr, Diagnostic> {
        let mut expr = self.parse_primary()?;
        loop {
            match self.cur.kind {
                TokenKind::Dot => {
                    self.bump()?;
                    let name = self.expect_ident()?;
                    let end = self.prev_end(expr.span.end);
                    expr = Expr {
                        span: Span::new(expr.span.start, end),
                        kind: ExprKind::Member {
                            recv: Box::new(expr),
                            name,
                        },
                    };
                }
                TokenKind::LParen => {
                    self.bump()?;
                    let args = self.parse_args()?;
                    let end = self.expect(TokenKind::RParen, "expected ')'")?.end;
                    expr = Expr {
                        span: Span::new(expr.span.start, end),
                        kind: ExprKind::Call {
                            callee: Box::new(expr),
                            args,
                        },
                    };
                }
                TokenKind::LBracket => {
                    self.bump()?;
                    let index = self.parse_expr()?;
                    let end = self.expect(TokenKind::RBracket, "expected ']'")?.end;
                    expr = Expr {
                        span: Span::new(expr.span.start, end),
                        kind: ExprKind::Index {
                            recv: Box::new(expr),
                            index: Box::new(index),
                        },
                    };
                }
                TokenKind::Question => {
                    let end = self.cur.span.end;
                    self.bump()?;
                    expr = Expr {
                        span: Span::new(expr.span.start, end),
                        kind: ExprKind::Try(Box::new(expr)),
                    };
                }
                _ => break,
            }
        }
        Ok(expr)
    }
